<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060000"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"


   >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0"
        android:id="@+id/button0"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDot"
        android:id="@+id/buttonDot"
        android:layout_alignTop="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:layout_toEndOf="@+id/button0"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:layout_below="@+id/button7"
        android:layout_toLeftOf="@+id/buttonDot"
        android:layout_toStartOf="@+id/buttonDot"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/buttonDot"
        android:layout_toStartOf="@+id/buttonDot"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:id="@+id/button7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/buttonDot"
        android:layout_alignStart="@+id/buttonDot"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:textColor="#32f720"
        android:background="#060000"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:id="@+id/button9"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEq"
        android:id="@+id/buttonEq"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="45dp"
        android:fontFamily="courier"
        android:layout_below="@+id/buttonMinus"
        android:layout_alignLeft="@+id/buttonDEL"
        android:layout_alignStart="@+id/buttonDEL" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlus"
        android:id="@+id/buttonPlus"
        android:layout_marginTop="65dp"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:layout_below="@+id/button0"
        android:layout_toLeftOf="@+id/buttonDot"
        android:layout_toStartOf="@+id/buttonDot"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMinus"
        android:id="@+id/buttonMinus"
        android:background="#060000"
        android:textColor="#32f720"
        android:layout_alignTop="@+id/buttonPlus"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:textSize="40dp"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDiv"
        android:id="@+id/buttonDiv"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:layout_below="@+id/buttonMinus"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:fontFamily="courier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonx"
        android:id="@+id/buttonx"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="35dp"
        android:layout_alignBaseline="@+id/buttonDiv"
        android:layout_alignBottom="@+id/buttonDiv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="courier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer"
        android:id="@+id/answer"
        android:layout_alignParentTop="true"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="35dp"
        android:fontFamily="courier"
        android:layout_alignRight="@+id/button9"
        android:layout_alignEnd="@+id/button9"
        android:layout_above="@+id/button9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDEL"
        android:id="@+id/buttonDEL"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier"
        android:layout_alignBaseline="@+id/buttonMinus"
        android:layout_alignBottom="@+id/buttonMinus"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLR"
        android:id="@+id/clear"
        android:background="#060000"
        android:textColor="#32f720"
        android:textSize="40dp"
        android:fontFamily="courier"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

</RelativeLayout>
